plugins {
    id 'java'
    // IntelliJ Platform插件开发工具
    // 版本说明：
    // - 1.17.0: 最新版本，支持最新IntelliJ功能，要求Java 11+和Gradle 7.0+
    // - 1.13.3: 较老版本，兼容Java 8，但功能较少
    // - 1.10.1: 更老版本，更好的向后兼容性
    // 选择原则：使用最新版本获得最佳开发体验，遇到兼容性问题时再降级
    id 'org.jetbrains.intellij' version '1.17.0'
}

group 'jp.kitabatakep'
version '3.6.6'  // 插件版本号 - 发布新版本时更新此行

sourceCompatibility = 17
targetCompatibility = 17

// 配置Java工具链
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
    mavenLocal()
    // 添加JetBrains仓库作为备选
    maven {
        url 'https://cache-redirector.jetbrains.com/intellij-dependencies'
    }
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.12'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version.set('2024.3')  // 编译时依赖的IntelliJ版本 - 使用最低支持版本确保向后兼容
    type.set('IC')         // 使用Community版本进行编译，确保更好的兼容性
    plugins.set([])        // 明确声明不依赖其他插件
}
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

// 处理资源文件编码 - 确保 properties 文件使用 UTF-8
tasks.withType(ProcessResources) {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
    filteringCharset = 'UTF-8'
}

//runIde {
//    ideDirectory '/Applications/RubyMine.app/Contents'
//}

// 配置runIde任务
runIde {
    // 设置最大堆内存
    maxHeapSize = "2g"
    // 禁用自动重载以避免某些问题
    autoReloadPlugins.set(false)
    // 设置系统属性
    systemProperties['idea.is.internal'] = true
}

// patch of https://youtrack.jetbrains.com/issue/KTIJ-782
tasks.buildSearchableOptions {
    enabled = false
}

patchPluginXml {
    def stripTag = { text, tag -> text.replace("<${tag}>", "").replace("</${tag}>", "") }
    def bodyInnerHTML = { path ->
        stripTag(stripTag(file(path).text, "html"), "body")
    }

    // 设置版本兼容范围 - 向前兼容（最低2024.3，兼容到2025.3）
    sinceBuild.set('243')    // 最低支持版本：2024.3 (构建号243)
    untilBuild.set('253.*')  // 最高支持版本：2025.3.x (需要时可手动更新到更高版本)
    
    pluginDescription.set(provider{ bodyInnerHTML("src/main/resources/META-INF/description.html") })
    changeNotes.set(provider{ bodyInnerHTML("src/main/resources/META-INF/changeNotes.html") } )
}

// 插件验证配置 - 验证向前兼容性
runPluginVerifier {
    // 测试版本：覆盖支持的版本范围
    ideVersions.set(['2024.3', '2025.1', '2025.2'])
    // 设置失败级别，只关注严重的兼容性问题
    failureLevel.set(['COMPATIBILITY_PROBLEMS'])
    // 下载目录配置
    downloadDir.set("${project.buildDir}/pluginVerifier/ides")
}